YH-1285: Fix dropdown clipping inside Card component

--- a/src/features/profile/editProfileForm/ui/EditProfileForm/EditProfileForm.module.css
+++ b/src/features/profile/editProfileForm/ui/EditProfileForm/EditProfileForm.module.css
@@ -5,3 +5,7 @@
 .btn-container {
   margin-top: 36px;
 }
+
+.card-with-visible-overflow {
+  overflow: visible;
+}
